@@ -1,8 +1,8 @@
 package org.wdc.web.controller;
 
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.codehaus.jackson.map.ObjectMapper;
-import org.springframework.core.io.FileSystemResource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -15,7 +15,7 @@ import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
 @Controller
-@RequestMapping(name = "/widgets", method = RequestMethod.PUT)
+@RequestMapping(value = "/widget")
 public class WidgetUpdateController {
     private static final String[] EXT_WHITELIST = {".js", ".png", ".css", ".html", ".txt", ".json"};
     private static final int WIDGET_HTML = 0;
@@ -25,13 +25,18 @@ public class WidgetUpdateController {
     // TODO: move to servlet environment constants
     private static final String WIDGETS_JSON_PATH = "src/main/webapp/resources/widgets/widgets.json";
 
-    @RequestMapping(value="{widgetName}", method = RequestMethod.PUT)
+    @RequestMapping(value = "{widgetName}", method = RequestMethod.POST)
     @ResponseBody
     @SuppressWarnings("unchecked")
     public ResponseEntity<String> updateWidget(@PathVariable String widgetName,
-                                               @RequestBody MultipartFile file) {
+                                               @RequestParam("file") MultipartFile file) {
         ObjectMapper mapper = new ObjectMapper();
         LinkedHashMap<String, LinkedHashMap<String, Object>> widgets = null;
+
+        Process gulpBuild = null;
+
+        // parent directory for all files of the widget
+        String destination = "resources/widgets" + widgetName;
 
         // decompress zip archive to the correct directory
         try (InputStream is = file.getInputStream();
@@ -47,8 +52,7 @@ public class WidgetUpdateController {
             boolean[] widgetFileExistence = new boolean[3];
 
             ZipEntry entry;
-            // parent directory for all files of the widget
-            String destination = "resources/widgets" + widgetName;
+
             while ((entry = zipInputStream.getNextEntry()) != null) {
                 File entryDestination = new File(destination, entry.getName());
                 entryDestination.getParentFile().mkdirs();
@@ -72,11 +76,22 @@ public class WidgetUpdateController {
                     writeValue(new FileOutputStream(WIDGETS_JSON_PATH), widgets);
 
             // TODO: if needed add Windows process
-            // TODO: handle exception gracefully
-            Process myProcess = Runtime.getRuntime().exec("gulp build");
+            gulpBuild = new ProcessBuilder("gulp", "build")
+                    .directory(new File("src/main/webapp/"))
+                    .start();
         } catch (Exception e) {
             e.printStackTrace();
+
+            // delete directory if its contents weren't created normally
+            try {
+                FileUtils.deleteDirectory(new File(destination));
+            } catch (IOException cantDeleteDirEx) {
+                cantDeleteDirEx.printStackTrace();
+            }
             return new ResponseEntity<>(e.toString(), HttpStatus.BAD_REQUEST);
+        } finally {
+            // kill process if something went wrong
+            if (gulpBuild != null) gulpBuild.destroy();
         }
         return new ResponseEntity<>(HttpStatus.OK);
     }
@@ -113,9 +128,5 @@ public class WidgetUpdateController {
         if (!widgetFileExistence[WIDGET_HTML]) widget.put("nohtml", true);
         if (!widgetFileExistence[WIDGET_JS]) widget.put("nojs", true);
         if (!widgetFileExistence[ICON_PNG]) widget.put("noicon", true);
-    }
-
-    public static void main(String[] args) throws IOException{
-        Process myProcess = Runtime.getRuntime().exec("sublime");
     }
 }
